2002-07-14 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_misc.nw, x_dialog.nw, lib/system-gschemrc.in: Renamed 
	user visible references of uref to refdes

	* examples/*.sch: Update all schematics using gschupdate
	
2002-07-09 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/x_attribedit.nw: Added code so that value entry field is 
	selected if there is something to select (makes replacing the text
	much faster).

	* tests/: Created tests directory mainly to hold various tests 

	* examples/*.sch: Moved some of the developer only schematics into
	the test/ directory

	* tests/ext_chars.sch: Added a simple little schematic to test the
	loading of the extended characters.  This should not crash gschem
	anymore. :)

2002-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* examples/*.sch: Updated all schematics to use netname instead of
	label

	* noweb/x_attribedit.nw: Changed all occurrances of label to netname

        * lib/system-gschemrc.in Changed all occurrances of label to netname

2002-07-06 Ales Hvezda   <ahvezda@geda.seul.org>

	* noweb/o_basic.c: Added code for o_erase_selected (not used
	currently)

        * configure.in and Makefile.am: Upgraded to automake 1.6.2

	* noweb/x_dialog.nw: Removed attrib edit dialog box from this file

	* noweb/x_attribedit.nw: Created new file for attrib edit dialog box

	* src/Makefile.am, noweb/Makefile.am: Added above file to Makefiles

	* noweb/x_attribedit.nw: Completely reworked attrib edit dialog box to
	be much simpler and cleaner

	* noweb/x_attribedit.nw: Integrated patch from Dave Lawrence which
	adds a bunch of useful capabilities to the attrib add dialog box, 
	add an attribute to multiple objects, replace existing attributes

2002-07-05 Ales Hvezda   <ahvezda@geda.seul.org>

	* lib/system-gschemrc.in: Fixed spelling mistake

	* lib/system-gschemrc.in: Fixed the load of the commonrc file to 
	work with --with-rcdir again.

	* noweb/g_key.nw, g_register.nw, i_callbacks.nw: Added Edit/update
	command 
